--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -4,12 +4,12 @@ on:
  push:
    branches:
      - main
-   pull_request:
+   paths:
      branches:
        - main
    workflow_dispatch:
 
- jobs:
+jobs:
    hello:
       runs-on: ubuntu-latest
       steps: 
