--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -4,10 +4,10 @@ on:
  push:
    branches:
      - main
-   paths:
+ pull_request:
      branches:
        - main
-   workflow_dispatch:
+ workflow_dispatch:
 
 jobs:
    hello:
