--- a/.github/workflows/new-workflow.yaml
+++ b/.github/workflows/new-workflow.yaml
@@ -7,7 +7,7 @@ jobs:
   comment-with-action:
     runs-on: ubuntu-latest
     steps:
-      - name: dump github content
+      - name: "dump github content"
         run: echo'${{ toJSON(github.event) }}' | jq
         shell: bash
 
