--- a/.github/workflows/new-workflow.yaml
+++ b/.github/workflows/new-workflow.yaml
@@ -1,8 +1,7 @@
 name: new issues in workflow
 on:
   issues:
-    types:
-      - opened
+    types: [opened]
 jobs:
   comment-with-action:
     runs-on: ubuntu-latest
