--- a/.github/workflows/new-workflow.yaml
+++ b/.github/workflows/new-workflow.yaml
@@ -3,10 +3,10 @@ on:
   issues:
     types: [opened]
 jobs:
-  comment-with-action:
+   comment-with-action:
     runs-on: ubuntu-latest
     steps:
-      - name: "dump github content"
+      - name: "dump github context"
         run: echo'${{ toJSON(github.event) }}' | jq
         shell: bash
 
