--- a/.github/workflows/new-workflow.yaml
+++ b/.github/workflows/new-workflow.yaml
@@ -6,8 +6,8 @@ jobs:
    comment-with-action:
     runs-on: ubuntu-latest
     steps:
-      - name: "dump github context"
-        run: echo'${{ toJSON(github.event) }}' | jq
+      - name: "dump GitHub context"
+        run: echo'${{ toJSON(GitHub.event) }}' | jq
         shell: bash
 
           
