--- a/.github/workflows/new-workflow.yaml
+++ b/.github/workflows/new-workflow.yaml
@@ -6,7 +6,7 @@ jobs:
    comment-with-action:
     runs-on: ubuntu-latest
     steps:
-      - name: "dump GitHub context"
+      - name: dump GitHub context
         run: echo'${{ toJSON(GitHub.event) }}' | jq
         shell: bash
 
